src/main/java/ru/safonov/test_task/dto/error/NotValidUserException.java
package ru.safonov.test_task.dto.error;

public class NotValidUserException extends RuntimeException{
    public NotValidUserException(String msg) {
        super(msg);
    }
}
